Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@ int port = (iter++)-&gt;AsInt32();</code></p>
 <li>Additional device LED commands </li>
 <li>Additional device message types (tilt, arc, etc).</li>
 </ul><p>Feel free to contact me with questions, comments or to just say 'hi!' at daniels.bytes at gmail dot com.  Thanks!</p>
+
+<p>Check out my main blog page at <a href="http://daniel-bytes.github.io/">daniel-bytes.github.io</a></p>
         </section>
 
         <footer>
