--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@ int port = (iter++)-&gt;AsInt32();</code></p>
 <li>Additional device message types (tilt, arc, etc).</li>
 </ul><p>Feel free to contact me with questions, comments or to just say 'hi!' at daniels.bytes at gmail dot com.  Thanks!</p>
 
+<p><a href="http://monome.org/community/discussion/17191/tutorial-connecting-to-serialosc-with-c-#Item_1">Discuss at monome.org</a></p>
+
 <p>Check out my main blog page at <a href="http://daniel-bytes.github.io/">daniel-bytes.github.io</a></p>
         </section>
 
